; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/asihpi/extr_hpi6000.c_instream_message.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/asihpi/extr_hpi6000.c_instream_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpi_adapter_obj = type { i32 }
%struct.hpi_message = type { i32 }
%struct.hpi_response = type { i32 }

@HPI_ERROR_INVALID_FUNC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hpi_adapter_obj*, %struct.hpi_message*, %struct.hpi_response*)* @instream_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @instream_message(%struct.hpi_adapter_obj* %0, %struct.hpi_message* %1, %struct.hpi_response* %2) #0 {
  %4 = alloca %struct.hpi_adapter_obj*, align 8
  %5 = alloca %struct.hpi_message*, align 8
  %6 = alloca %struct.hpi_response*, align 8
  store %struct.hpi_adapter_obj* %0, %struct.hpi_adapter_obj** %4, align 8
  store %struct.hpi_message* %1, %struct.hpi_message** %5, align 8
  store %struct.hpi_response* %2, %struct.hpi_response** %6, align 8
  %7 = load %struct.hpi_message*, %struct.hpi_message** %5, align 8
  %8 = getelementptr inbounds %struct.hpi_message, %struct.hpi_message* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  switch i32 %9, label %14 [
    i32 129, label %10
    i32 128, label %10
  ]

10:                                               ; preds = %3, %3
  %11 = load i32, i32* @HPI_ERROR_INVALID_FUNC, align 4
  %12 = load %struct.hpi_response*, %struct.hpi_response** %6, align 8
  %13 = getelementptr inbounds %struct.hpi_response, %struct.hpi_response* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  br label %19

14:                                               ; preds = %3
  %15 = load %struct.hpi_adapter_obj*, %struct.hpi_adapter_obj** %4, align 8
  %16 = load %struct.hpi_message*, %struct.hpi_message** %5, align 8
  %17 = load %struct.hpi_response*, %struct.hpi_response** %6, align 8
  %18 = call i32 @hw_message(%struct.hpi_adapter_obj* %15, %struct.hpi_message* %16, %struct.hpi_response* %17)
  br label %19

19:                                               ; preds = %14, %10
  ret void
}

declare dso_local i32 @hw_message(%struct.hpi_adapter_obj*, %struct.hpi_message*, %struct.hpi_response*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
